--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,7 @@
 @import "tailwindcss";
 @plugin "daisyui";
+@plugin "daisyui/theme" {
+  name: "light";
+  default: true;
+  --color-primary: #1e3a8a;
+}
